--- a/SIGS/app/views/users/show.html.erb
+++ b/SIGS/app/views/users/show.html.erb
@@ -1,12 +1,67 @@
-<h1> <%= @user.name  %></h1>
-  <% case permission[:level]%>
-   <% when 0 %>
-   <%= render partial: "users/degs_show",
-        locals: {user: @user} %>
-   <% when 1 %>
-   <%= render partial: "users/coordinators_show",
-        locals: {user: @user} %>
-    <% when 2 %>
-    <%= render partial: "users/administrative_assistants_show",
-         locals: {user: @user} %>
-    <% end %>
+<div class="row">
+  <div class="col-sm-12 welcomeUser">Bem-vindo(a), <%= @user.name  %>.</div>
+  <div class="col-md-4 col-sm-6 col-xs-12">
+    <div class="info-box">
+      <span class="info-box-icon bg-aqua"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span></span>
+
+      <div class="info-box-content">
+        <span class="info-box-text">Total de Turmas</span>
+        <span class="info-box-number">90</span>
+      </div>
+      <!-- /.info-box-content -->
+    </div>
+  </div>
+  <div class="col-md-4 col-sm-6 col-xs-12">
+    <div class="info-box">
+      <span class="info-box-icon bg-red"><span class="glyphicon glyphicon-book" aria-hidden="true"></span></span>
+
+      <div class="info-box-content">
+        <span class="info-box-text">Turmas Alocadas</span>
+        <span class="info-box-number">90</span>
+      </div>
+      <!-- /.info-box-content -->
+    </div>
+  </div>
+  <div class="col-md-4 col-sm-6 col-xs-12">
+    <div class="info-box">
+      <span class="info-box-icon bg-yellow"><span class="glyphicon glyphicon-time" aria-hidden="true"></span></span>
+
+      <div class="info-box-content">
+        <span class="info-box-text">Solicitações</span>
+        <span class="info-box-number">5</span>
+      </div>
+      <!-- /.info-box-content -->
+    </div>
+  </div>
+</div><!-- /.row -->
+<h2>Calendário</h2>
+<div class="row">
+  <div class="col-sm-8">
+    <table class="table table-hover whiteBackground">
+      <thead>
+        <tr>
+          <td>Período</td>
+          <td>Início</td>
+          <td>Fim</td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Ajuste</td>
+          <td>XX/XX/XXXX</td>
+          <td>XX/XX/XXXX</td>
+        </tr>
+        <tr>
+          <td>Alocação</td>
+          <td>XX/XX/XXXX</td>
+          <td>XX/XX/XXXX</td>
+        </tr>
+        <tr>
+          <td>Letivo</td>
+          <td>XX/XX/XXXX</td>
+          <td>XX/XX/XXXX</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
