issue #73: style and script adjustments

--- a/SIGS/app/views/school_rooms/edit.html.erb
+++ b/SIGS/app/views/school_rooms/edit.html.erb
@@ -10,12 +10,37 @@
     <%= school_room.label :vacancies, "Capacidade" %>
     <%= school_room.number_field :vacancies, class: 'form-control' %>
   </div>
-  <br>
-  <%= school_room.label :course_ids, "Cursos" %>
-  <div class="checkbox-group">
-
-    <%= school_room.collection_check_boxes(:course_ids, @all_courses, :id, :name, include_blank: true)%>
+  <hr>
+  <div class="flexContainer search-result-block">
+    <div>
+      <p>Adicionar Curso</p>
+      <div class="search-elements">
+        <input type="text" id="input-search-courses" class="search-input" placeholder="Buscar curso por código...">
+      </div>
+      <div class="search-elements">
+        <button type="button" id="add-course" class="icon-search-submit"> 
+          <i class="fa fa-search fa-lg"></i> 
+        </button>
+      </div>
+      <div class="" id="search-result"></div>
+    </div>
+    <div>
+      <div class="search-elements" id="courses-list">
+        <p>Cursos Adicionados</p>
+        <input type="hidden" value="" name="school_room[course_ids][]" readOnly="true">
+        <% @school_room.courses.each do |course| %>
+          <p id="course-added-<%= course.id %>">
+            <button type="button" id="button-remove" class="btn btn-default" onClick="removeCourseInList(<%= course.id %>)">
+              <i class="fa fa-minus"></i>
+              <%= course.name %>
+            </button>
+            <input type="hidden" value="<%= course.id %>" name="school_room[course_ids][]" readOnly="true">
+          </p>
+        <% end %>
+      </div>
+    </div>
   </div>
+  <hr>
   <br>
   <%= school_room.label :category_ids, "Categorias" %>
   <div class="checkbox-group">
@@ -26,3 +51,62 @@
   <%= school_room.submit "Alterar", class: 'pull-right btn btn-default btn-success' %>
 
 <% end %>
+<script type="text/javascript">
+  $('#add-course').click(function(){
+    searchCourses();
+  });
+
+  var course;
+
+  function searchCourses() {
+    if($('#input-search-courses').val()) {
+      $.  getJSON(
+        '../search_courses/' + $('#input-search-courses').val() ,{
+        format: 'json'
+      }).success(function(data){
+        console.log(data);
+        course = data;
+        console.log('valor de course = ' + course);
+        viewResult();
+      }).error(function(){
+        alert("Falha no Processamento");
+      });
+    }
+  }
+
+  function viewResult() {
+    if(course != null) {
+      $('#search-result').html(
+        '<button type="button" id="button-element" class="btn btn-default" onClick="addCourseInList()"><i class="fa fa-plus"></i>' +
+          course.name + '</button>');
+    } else {
+      $('#search-result').html(
+        '<p>Nenhum curso encontrado.</p>');
+    }
+  }
+
+  function addCourseInList() {
+    var element = document.getElementById('course-added-' + course.id);
+    if (element == null) {
+      $('#courses-list').append(
+        '<p id="course-added-'+course.id+'">' +
+        '<button type="button" id="button-remove class="btn btn-default" onClick="removeCourseInList('+course.id+')"><i class="fa fa-minus"></i>' +
+          course.name +
+        '</button>' +
+        '<input type="hidden" value="'+course.id+'" name="school_room[course_ids][]" readOnly="true">' + 
+        '</p>');
+    } else {
+      var duplicate_course = document.getElementById('duplicate-course');
+      if(duplicate_course == null) {
+        $('#search-result').append("<p id='duplicate-course'>Este curso já pertence a esta turma.</p>");   
+      }
+    }
+  }
+
+  function removeCourseInList(id) {
+    console.log("removendo");
+    $('#course-added-'+id).remove();
+    $('#search-result').html("");
+  }
+
+</script>
