--- a/SIGS/app/views/school_rooms/new.html.erb
+++ b/SIGS/app/views/school_rooms/new.html.erb
@@ -17,25 +17,27 @@
   <br>
 
   <hr>
-    <p>Cursos (código)</p>
-    <div class="search-elements">
-      <input type="text" id="input-search-courses" class="search-input">
+  <div class="flexContainer search-result-block">
+    <div>
+      <p>Adicionar Curso</p>
+      <div class="search-elements">
+        <input type="text" id="input-search-courses" class="search-input" placeholder="Buscar curso por código...">
+      </div>
+      <div class="search-elements">
+        <button type="button" id="add-course" class="icon-search-submit"> 
+          <i class="fa fa-search fa-lg"></i> 
+        </button>
+      </div>
+      <div class="" id="search-result"></div>
     </div>
-    <div class="search-elements">
-      <button type="button" id="add-course" class="icon-search-submit"> 
-        <i class="fa fa-search fa-lg"></i> 
-      </button>
+    <div>
+      <div class="search-elements" id="courses-list">
+        <p>Cursos Adicionados</p>
+        <input type="hidden" value="" name="school_room[course_ids][]" readOnly="true">
+      </div>
     </div>
-    <div class="search-elements" id="courses-list" style="margin-left: 30%">
-      <p>Cursos Adicionados</p>
-      <input type="hidden" value="" name="school_room[course_ids][]" readOnly="true">
-    </div>
+  </div>
 
-    <div class="" id="search-result">
-      
-    </div>
-
-    <br>
   <hr>
   <p>Categorias</p>
   <div class="checkbox-group">
@@ -53,51 +55,55 @@
   });
 
   var course;
-  console.log('valor de course = ' + course);
 
   function searchCourses() {
-    $.getJSON(
-      '../school_rooms/search_courses/' + $('#input-search-courses').val() ,{
-      format: 'json'
-    }).success(function(data){
-      console.log(data);
-      course = data;
-      console.log('valor de course = ' + course);
-      viewResult();
-    }).error(function(){
-      alert("Falha no Processamento");
-    });
+    if($('#input-search-courses').val()) {
+      $.  getJSON(
+        '../school_rooms/search_courses/' + $('#input-search-courses').val() ,{
+        format: 'json'
+      }).success(function(data){
+        console.log(data);
+        course = data;
+        console.log('valor de course = ' + course);
+        viewResult();
+      }).error(function(){
+        alert("Falha no Processamento");
+      });
+    }
   }
 
   function viewResult() {
-    console.log(course.name);
-    $('#search-result').html(
-      '<button type="button" id="button-element" class="btn btn-default" onClick="addCourseInList()">' +
-        course.name + '  <i class="fa fa-plus"></i>'
-        + '</button>');
+    if(course != null) {
+      $('#search-result').html(
+        '<button type="button" id="button-element" class="btn btn-default" onClick="addCourseInList()"><i class="fa fa-plus"></i>' +
+          course.name + '</button>');
+    } else {
+      $('#search-result').html(
+        '<p>Nenhum curso encontrado.</p>');
+    }
   }
 
   function addCourseInList() {
-    if ($('#course-added-'+course.id).lenght == 0) {
-      console.log('entrou no if');
+    var element = document.getElementById('course-added-' + course.id);
+    if (element == null) {
       $('#courses-list').append(
         '<p id="course-added-'+course.id+'">' +
-        '<button type="button" id="button-remove class="btn btn-default" onClick="removeCourseInList('+course.id+')">' +
-          course.name + '  <i class="fa fa-minus"></i>' +
+        '<button type="button" id="button-remove class="btn btn-default" onClick="removeCourseInList('+course.id+')"><i class="fa fa-minus"></i>' +
+          course.name +
         '</button>' +
         '<input type="hidden" value="'+course.id+'" name="school_room[course_ids][]" readOnly="true">' + 
         '</p>');
-    }
-    else {
-      console.log('entrou no else');
-      //nada
+    } else {
+      var duplicate_course = document.getElementById('duplicate-course');
+      if(duplicate_course == null) {
+        $('#search-result').append("<p id='duplicate-course'>Este curso já pertence a esta turma.</p>");   
+      }
     }
   }
 
   function removeCourseInList(id) {
-    console.log('CHAMOU O REMOVE');
-    console.log('#course-added-'+id)
     $('#course-added-'+id).remove();
+    $('#search-result').html("");
   }
 
 </script>
