--- a/SIGS/app/views/users/show.html.erb
+++ b/SIGS/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
 
       <div class="info-box-content">
         <span class="info-box-text">Total de Turmas</span>
-        <span class="info-box-number">90</span>
+        <span class="info-box-number"><%=@school_room_count%></span>
       </div>
       <!-- /.info-box-content -->
     </div>
@@ -17,7 +17,7 @@
 
       <div class="info-box-content">
         <span class="info-box-text">Turmas Alocadas</span>
-        <span class="info-box-number">90</span>
+        <span class="info-box-number">  <%=@school_rooms_allocated_count%></span>
       </div>
       <!-- /.info-box-content -->
     </div>
@@ -28,7 +28,7 @@
 
       <div class="info-box-content">
         <span class="info-box-text">Solicitações</span>
-        <span class="info-box-number">5</span>
+        <span class="info-box-number"><%=@solicitation_count%></span>
       </div>
       <!-- /.info-box-content -->
     </div>
@@ -47,19 +47,19 @@
       </thead>
       <tbody>
         <tr>
-          <td>Ajuste</td>
-          <td>XX/XX/XXXX</td>
-          <td>XX/XX/XXXX</td>
+          <td><%=@periods.first.period_type%></td>
+          <td><%=@periods.first.initial_date.strftime('%d/%m/%Y')%></td>
+          <td><%=@periods.first.final_date.strftime('%d/%m/%Y')%></td>
         </tr>
         <tr>
-          <td>Alocação</td>
-          <td>XX/XX/XXXX</td>
-          <td>XX/XX/XXXX</td>
+          <td><%=@periods.second.period_type%></td>
+          <td><%=@periods.second.initial_date.strftime('%d/%m/%Y')%></td>
+          <td><%=@periods.second.final_date.strftime('%d/%m/%Y')%></td>
         </tr>
         <tr>
-          <td>Letivo</td>
-          <td>XX/XX/XXXX</td>
-          <td>XX/XX/XXXX</td>
+          <td><%=@periods.third.period_type%></td>
+          <td><%=@periods.third.initial_date.strftime('%d/%m/%Y')%></td>
+          <td><%=@periods.third.final_date.strftime('%d/%m/%Y')%></td>
         </tr>
       </tbody>
     </table>
