issue #74: fix problems

--- a/SIGS/app/views/allocations/new.html.erb
+++ b/SIGS/app/views/allocations/new.html.erb
@@ -7,6 +7,7 @@
 <%= form_tag allocations_create_path do %>
 
   <% days = ["Segunda", "Terça", "Quarta", "Quinta", "Sexta", "Sábado"] %>
+  <label for="select-room">Selecionar sala: </label>
   <select id="select-room">
     <%= options_from_collection_for_select(@coordinator_rooms, :id, :name) %>
   </select>
@@ -23,7 +24,7 @@
       <th></th>
       <% days.each do |day| %>
         <td>
-          <select id="select-<%=day%>" class="autofill-field">
+          <select id="select-<%=day%>" class="autofill-field selectAlocar">
             <%= options_from_collection_for_select(@coordinator_rooms, :id, :name) %>
           </select>
         </td>
