--- a/SIGS/app/assets/stylesheets/style.scss
+++ b/SIGS/app/assets/stylesheets/style.scss
@@ -13,14 +13,17 @@
   margin: 60px 0;
 }
 
-.subtitle{
+.subtitle, .subtitleRequest {
   font-size: 20px;
   font-family: 'Sawasdee';
   margin: -50px 0 60px 0;
 }
 
-.container.container.container-fluid.myContainer:not(#signIn) {
+.subtitleRequest {
+  margin-top: 0;
+}
 
+.container.container.container-fluid.myContainer:not(#signIn) {
   width: 98vw !important;
 }
 
