issue #71: Implement unit and acceptance test of method index - controller solicitations

--- a/SIGS/app/views/layouts/application.html.erb
+++ b/SIGS/app/views/layouts/application.html.erb
@@ -81,6 +81,7 @@
                     <li><%= link_to "Prédios", reports_by_building_path %></li>
                   </ul>
               </li>
+              <li><%= link_to "Solicitações", solicitations_index_path %></li>
           </ul>
 
 
