--- a/SIGS/app/views/layouts/application.html.erb
+++ b/SIGS/app/views/layouts/application.html.erb
@@ -65,6 +65,7 @@
               <%  else %>
                 <li><%= link_to 'Turmas', school_rooms_index_path %></li>
               <% end %>
+              <li><%= link_to "Solicitações", solicitations_index_path %></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Relatórios <span class="caret"></span></a>
                 <ul class="dropdown-menu">
@@ -110,6 +111,7 @@
                 <%  else %>
                   <li><%= link_to 'Turmas', school_rooms_index_path %></li>
                 <% end %>
+                <li><%= link_to "Solicitações", solicitations_index_path %></li>
               </ul>
             </div>
             <div class="col-sm-3">
