initial solicitation changes of client to presentation

--- a/SIGS/app/views/allocations/new.html.erb
+++ b/SIGS/app/views/allocations/new.html.erb
@@ -47,6 +47,18 @@
   });
 
   $("#select-room").change(function() {
+    if ($("#select-Segunda").hasClass("not-modify")) {}// Nothing do
+    else {$("#select-Segunda").val($("#select-room").val());}
+    if ($("#select-Terça").hasClass("not-modify")) {}// Nothing do
+    else {$("#select-Terça").val($("#select-room").val());}
+    if ($("#select-Quarta").hasClass("not-modify")) {}// Nothing do
+    else {$("#select-Quarta").val($("#select-room").val());}
+    if ($("#select-Quinta").hasClass("not-modify")) {}// Nothing do
+    else {$("#select-Quinta").val($("#select-room").val());}
+    if ($("#select-Sexta").hasClass("not-modify")) {}// Nothing do
+    else {$("#select-Sexta").val($("#select-room").val());}
+    if ($("#select-Sábado").hasClass("not-modify")) {}// Nothing do
+    else {$("#select-Sábado").val($("#select-room").val());}
     ajaxReloadTable();
   });
 
