--- a/SIGS/app/views/reports/by_room.html.erb
+++ b/SIGS/app/views/reports/by_room.html.erb
@@ -1,6 +1,6 @@
 <h1>Relatório por Sala</h1>
 
-<%= form_for :reports_by_room, url: generate_by_room_path do |f| %>
+<%= form_for :reports_by_room, url: generate_by_room_path, :html => { :onsubmit => "return valid()" }  do |f| %>
 	<%=f.label :departments, 'Departamento:' %>
 	<%=f.select :departments, @departments.collect {|d| [d.name, d.id] }, class: 'form-control' %>
 
@@ -13,15 +13,24 @@
 	<%=f.text_field :filter, class: 'form-control', placeholder: 'Digite o código da sala' %>
 
 	<%=f.label :room_code, 'Código da sala:' %>
-	<span style="color: red;" class="returnMsg"></span>
+	<span style="color: red;" class="returnMsg" id="fill"></span><br>
 	<%=f.select :room_code, @rooms.collect {|d| [d.name, d.id] }, class: 'form-control' %>
 
-  <%= f.submit "Gerar", class: 'pull-right btn btn-default btn-success' %>
+  <%= f.submit "Gerar", class: 'pull-right btn btn-default btn-success', data: { disable_with: false } %>
 
 <% end %>
 
 <script type="text/javascript">
-
+	function valid(){
+		if (document.getElementById('reports_by_room_room_code').value == "" &&
+					!document.getElementById('reports_by_room_all_rooms').checked){
+			$("#fill").html("Sala não encontrada");
+			return false;
+		}
+		else {
+			return true;
+		}
+	}
   $('input:checkbox').click(function (){
     $("#reports_by_room_filter").prop('disabled', $(this).prop('checked'));
     $("#reports_by_room_room_code").prop('disabled', $(this).prop('checked'));
