--- a/SIGS/app/assets/stylesheets/style.scss
+++ b/SIGS/app/assets/stylesheets/style.scss
@@ -58,10 +58,11 @@
 .alertContainer {
   display: flex;
   flex-direction: column;
-  margin-top: 10px;
   width: 250px;
-
-  float: right;
+  position: absolute;
+  top: 64px;
+  right: 0;
+  z-index: 9999;
 }
 .alert.alert-success,
 .alert.alert-notice,
@@ -71,7 +72,7 @@
   box-shadow: 2px 2px 10px #777;
   padding:10px;
   margin: 0;
-  margin-bottom: 10px;
+  // margin-bottom: 10px;
   border: none;
   width: 250px;
   z-index: 100;
