--- a/SIGS/app/views/solicitations/index.erb
+++ b/SIGS/app/views/solicitations/index.erb
@@ -1,6 +1,6 @@
 <h1>Solicitacoes Pendentes</h1>
 
-<% if @solicitations.count == 0 %>
+<% if @solicitations.nil? %>
   <h3>Não há nenhum usuário registrado no momento.</h3>
 <% else %>
   <table class="table">
